force-app/main/default/objects/cgcloud__Inventory_Transaction_Template__c/cgcloud__Inventory_Transaction_Template__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the inventory control template,  to be used for inventory control transactions.</description>
    <label>Inventory Transaction Template</label>
    <nameField>
        <label>Inventory Transaction Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Transaction Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>