force-app/main/default/objects/cgcloud__Inventory_Transaction_Template__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether the template is active or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>