force-app/main/default/objects/cgcloud__Inventory_Transaction_Template__c/fields/cgcloud__Initial__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Initial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the transaction is an initial transaction.</description>
    <label>Initial</label>
    <type>Checkbox</type>
</CustomField>