force-app/main/default/objects/cgcloud__Inventory_Transaction_Template__c/fields/cgcloud__Transaction_Control__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transaction_Control__c</fullName>
    <description>Specifies the transaction behaviour.</description>
    <label>Transaction Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
                <default>true</default>
                <label>Add</label>
            </value>
            <value>
                <fullName>Withdraw</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Current to Orderer</fullName>
            </value>
            <value>
                <fullName>Orderer to Current</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>