force-app/main/default/objects/cgcloud__Inventory_Transaction_Template__c/fields/cgcloud__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transaction_Type__c</fullName>
    <description>Specifies the transaction type.</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addition</fullName>
                <default>true</default>
                <label>Addition</label>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
            <value>
                <fullName>Balance</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>