force-app/main/default/objects/cgcloud__Inventory_Transaction_Template__c/fields/cgcloud__Use_Inventory_Reference_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_Inventory_Reference_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use Inventory Reference 2</description>
    <label>Use Inventory Reference 2</label>
    <type>Checkbox</type>
</CustomField>